--- a/samples/fifo2/Makefile.in
+++ b/samples/fifo2/Makefile.in
@@ -34,28 +34,28 @@ LIBS =
 # NOTE: The following variables (paths etc.) are set by the configure script.
 #       Any changes you make here will be lost with the next configure.
 
-OMNETPP_ROOT = /home/andras/omnetpp
-OMNETPP_SRC_DIR = /home/andras/omnetpp/src
+OMNETPP_ROOT=@OMNETPP_ROOT@
+OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
 
-CC = gcc -g -I. -c -x c++
-NEDC = nedc
-LD = gcc
-AR = ar rs
-MAKE_SO = gcc -shared -o
+CXX=@CXX@
+NEDC=@NEDC@
+LD=@LD@
+AR=@AR@
+MAKE_SO=@MAKE_SO@
 
-OMNETPP_INCL_PATH=-I/home/andras/omnetpp/src/sim
-OMNETPP_LIB_PATH=-L/home/andras/omnetpp/lib
+OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
+OMNETPP_LIB_PATH=@OMNETPP_LIB_PATH@
 
-TV_LIBS=-ltv
-X_LIBS=-lX11
-TK_LIBS=-ltk -ltcl -ldl
-PVM_LIBS=-lgpvm3 -lpvm3
-SYS_LIBS=-ldl -lm -lstdc++
+TV_LIBS=@TV_LIBS@
+X_LIBS=@X_LIBS@
+TK_LIBS=@TK_LIBS@
+PVM_LIBS=@PVM_LIBS@
+SYS_LIBS=@SYS_LIBS@
 
-TV_LIB_PATH=
-TK_LIB_PATH=-L/usr/lib -L/usr/lib
-X_LIB_PATH=-L/usr/X11R6/lib
-PVM_LIB_PATH=-L/home/andras/download/pvm3/lib/LINUX
+TV_LIB_PATH=@TV_LIB_PATH@
+TK_LIB_PATH=@TK_LIB_PATH@
+X_LIB_PATH=@X_LIB_PATH@
+PVM_LIB_PATH=@PVM_LIB_PATH@
 
 # User interface libs
 CMDENV_LIBS = -lenvir -lcmdenv
@@ -69,7 +69,7 @@ PVM_KERNEL_LIBS = -lsim_pvm $(PVM_LIB_PATH) $(PVM_LIBS)
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS = $(OMNETPP_LIB_PATH) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
 
-OMNETPP_INCLUDES = /home/andras/omnetpp/src/sim/*.h
+OMNETPP_INCLUDES=@OMNETPP_INCLUDES@
 
 #------------------------------------------------------------------------------
 
@@ -80,37 +80,37 @@ $(TARGET): $(OBJS) $(EXRA_OBJS)   makefile
 	$(LD) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
 
 fifo_n.o: fifo.h fifo_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifo_n.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifo_n.cc
 
 fifo_n.cc: fifo.ned
 	$(NEDC) $(INCLUDE_PATH) fifo.ned
 
 fifonet_n.o: fifonet_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifonet_n.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifonet_n.cc
 
 fifonet_n.cc: fifonet.ned
 	$(NEDC) $(INCLUDE_PATH) fifonet.ned
 
 gen_n.o: gen_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gen_n.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gen_n.cc
 
 gen_n.cc: gen.ned
 	$(NEDC) $(INCLUDE_PATH) gen.ned
 
 sink_n.o: sink_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) sink_n.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) sink_n.cc
 
 sink_n.cc: sink.ned
 	$(NEDC) $(INCLUDE_PATH) sink.ned
 
 fifo.o: fifo.cc fifo.h $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifo.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) fifo.cc
 
 gen.o: gen.cc fifo.h $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gen.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) gen.cc
 
 sink.o: sink.cc fifo.h $(OMNETPP_INCLUDES)
-	$(CC) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) sink.cc
+	$(CXX) $(INCLUDE_PATH) $(OMNETPP_INCL_PATH) sink.cc
 
 clean:
 	rm -f *.o *_n.cc $(TARGET)
