--- a/samples/fddi/Makefile.in
+++ b/samples/fddi/Makefile.in
@@ -30,26 +30,26 @@ KERNEL_LIBS = $(STD_KERNEL_LIBS)
 # The following variables (paths etc.) are set by the configure script
 # Modify that if you have problems!
 
-OMNETPP_ROOT = /home/andras/omnetpp
-OMNETPP_SRC_DIR = /home/andras/omnetpp/src
+OMNETPP_ROOT=@OMNETPP_ROOT@
+OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
 
-CC = gcc -g -I. -c -x c++
-NEDC = /home/andras/omnetpp/bin/nedc
-LD = gcc
+CXX=@CXX@
+NEDC=@NEDC@
+LD=@LD@
 
-OMNETPP_INCL_PATH=-I/home/andras/omnetpp/src/sim -I/home/andras/omnetpp/src/envir
-OMNETPP_LIB_PATH=-L/home/andras/omnetpp/lib
+OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
+OMNETPP_LIB_PATH=@OMNETPP_LIB_PATH@
 
-TV_LIBS=-ltv
-X_LIBS=-lX11
-TK_LIBS=-ltk8.0 -ltcl8.0 -ldl
-PVM_LIBS=-lgpvm3 -lpvm3
-SYS_LIBS=-ldl -lm -lstdc++
+TV_LIBS=@TV_LIBS@
+X_LIBS=@X_LIBS@
+TK_LIBS=@TK_LIBS@
+PVM_LIBS=@PVM_LIBS@
+SYS_LIBS=@SYS_LIBS@
 
-TV_LIB_PATH=
-TK_LIB_PATH=-L/usr/local/lib -L/usr/local/lib
-X_LIB_PATH=-L/usr/X11R6/lib
-PVM_LIB_PATH=
+TV_LIB_PATH=@TV_LIB_PATH@
+TK_LIB_PATH=@TK_LIB_PATH@
+X_LIB_PATH=@X_LIB_PATH@
+PVM_LIB_PATH=@PVM_LIB_PATH@
 
 # User interface libs
 CMDENV_LIBS = -lenvir -lcmdenv
@@ -63,7 +63,7 @@ PVM_KERNEL_LIBS = -lsim_pvm $(PVM_LIB_PATH) $(PVM_LIBS)
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS = $(OMNETPP_LIB_PATH) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
 
-OMNETPP_INCLUDES = /home/andras/omnetpp/src/sim/*.h /home/andras/omnetpp/src/envir/cenvir.h
+OMNETPP_INCLUDES=@OMNETPP_INCLUDES@
 
 # Object files from this directory to link
 OBJS = fddi_mac_n.o fddi_net_n.o othermod_n.o ssm_ifs_n.o fddi_mac.o othermod.o ssm_ifs.o
@@ -74,37 +74,37 @@ $(PROGRAM): $(OBJS) $(OTHERSIMPLES) makefile
 	$(LD) $(OBJS) $(OTHERSIMPLES) $(OMNETPP_LIBS) -o $(PROGRAM)
 
 fddi_mac_n.o: fddi_mac.h fddi_mac_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) fddi_mac_n.cc
+	$(CXX) $(OMNETPP_INCL_PATH) fddi_mac_n.cc
 
 fddi_mac_n.cc: fddi_mac.ned
 	$(NEDC) $(NED_INCL_PATH) fddi_mac.ned
 
 fddi_net_n.o: fddi_net_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) fddi_net_n.cc
+	$(CXX) $(OMNETPP_INCL_PATH) fddi_net_n.cc
 
 fddi_net_n.cc: fddi_net.ned
 	$(NEDC) $(NED_INCL_PATH) fddi_net.ned
 
 othermod_n.o: othermod.h othermod_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) othermod_n.cc
+	$(CXX) $(OMNETPP_INCL_PATH) othermod_n.cc
 
 othermod_n.cc: othermod.ned
 	$(NEDC) $(NED_INCL_PATH) othermod.ned
 
 ssm_ifs_n.o: ssm_ifs.h ssm_ifs_n.cc $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) ssm_ifs_n.cc
+	$(CXX) $(OMNETPP_INCL_PATH) ssm_ifs_n.cc
 
 ssm_ifs_n.cc: ssm_ifs.ned
 	$(NEDC) $(NED_INCL_PATH) ssm_ifs.ned
 
 fddi_mac.o: fddi_mac.cc fddi_def.h fddi_mac.h otherdef.h othermod.h ssm_ifs.h ssmifdef.h $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) fddi_mac.cc
+	$(CXX) $(OMNETPP_INCL_PATH) fddi_mac.cc
 
 othermod.o: othermod.cc fddi_def.h fddi_mac.h otherdef.h othermod.h ssm_ifs.h ssmifdef.h $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) othermod.cc
+	$(CXX) $(OMNETPP_INCL_PATH) othermod.cc
 
 ssm_ifs.o: ssm_ifs.cc fddi_def.h fddi_mac.h otherdef.h othermod.h ssm_ifs.h ssmifdef.h $(OMNETPP_INCLUDES)
-	$(CC) $(OMNETPP_INCL_PATH) ssm_ifs.cc
+	$(CXX) $(OMNETPP_INCL_PATH) ssm_ifs.cc
 
 clean:
 	rm -f *.o *_n.cc $(PROGRAM)
