X include path merged into Tk include path

--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -17,7 +17,6 @@ OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
 OMNETPP_INCLUDES=@OMNETPP_INCLUDES@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 TK_INCL_PATH=@TK_INCL_PATH@
-X_INCL_PATH=-I/usr/X11R6/include/X11
 LIB_SUFFIX=a
 
 # Local definitions
@@ -26,7 +25,7 @@ TKENV_INCLUDES=tkapp.h tkinsp.h tklib.h arrow.h
 INCL_PATH=-I..
 
 INCLUDES=$(OMNETPP_INCLUDES) $(ENVIR_INCLUDES) $(TKENV_INCLUDES)
-CC_OPTS=-fwritable-strings $(OMNETPP_INCL_PATH) $(INCL_PATH) $(TK_INCL_PATH) $(X_INCL_PATH)
+CC_OPTS=-fwritable-strings $(OMNETPP_INCL_PATH) $(INCL_PATH) $(TK_INCL_PATH)
 
 OMNETPP_TKENV_DIR=$(OMNETPP_SRC_DIR)/envir/tkenv
 
